--- a/webpage/index.html
+++ b/webpage/index.html
@@ -9,8 +9,10 @@
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
-	<script src="slider.js"></script>
+	<script src="components.js"></script>
   </head>
   <body>
+  <h1>Testi otsikko</h1>
+  <h3>Tässä lepää testikuvaus sivustosta.</h3>
   </body>
 </html>
